# app/Http/Controllers/AuthController.php
@@ -87,7 +87,7 @@ class AuthController extends Controller
      * @OA\Post(
      *     path="/api/auth/me",
      *     summary="Информаиця о пользователе",
-     *     tags={"Auth"},
+     *     tags={"Profile"},
      *     security={{"bearer_token":{}}},
      *     @OA\Response(
      *         response=200,
